fixed footer from fixed, and navbar made transparent with contrasted text

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,11 +3,13 @@
   position: sticky;
   top: 0px;
   z-index: 1;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+
   }
 
 .navbar-lewagon {
   justify-content: space-between;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0);
 }
 
 .navbar-lewagon .navbar-collapse {
